# cremniy-fork

./: .gitmodules  README.md  ROADMAP.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release.yml
docs/: README.md  README_ru.md  RELEASE.md
docs/diagrams/: .$gui_tree.drawio.bkp  gui_tree.drawio
src/: CMakeLists.txt  main.cpp
src/ToolTabs/CodeEditor/: codeeditortab.h
src/Tools/Tabs/Binary/: binarytab.cpp  binarytab.h
src/Tools/Tabs/Binary/QHexView/: CMakeLists.txt
src/Tools/Tabs/CodeEditor/: codeeditortab.cpp  codeeditortab.h
src/Tools/Tabs/Disassembler/: disassemblertab.h
src/app/IDEWindow/: idewindow.cpp  idewindow.h
src/app/WelcomeWindow/: welcomeform.cpp  welcomeform.h
src/dialogs/: reversecalculatordialog.cpp  shellcodegeneratordialog.cpp  shellcodegeneratordialog.h
src/include/: tooltab.h
src/libs/cremniy-codeeditor/src/widgets/: CustomCodeEditor.cpp
src/resources/: cremniy_res.qrc
src/ui/FilesTabWidget/: filestabwidget.h
src/ui/MenuBar/Menus/References/Windows/AsciiChars/: asciicharsref.cpp
src/ui/MenuBar/Menus/Tools/: toolsmenu.cpp
src/ui/ToolsTabWidget/: ToolTab.h  toolstabwidget.cpp
src/widgets/: codeeditortab.cpp  codeeditortab.h  disassemblertab.cpp  disassemblertab.h  filetab.cpp  filetab.h  hexviewtab.cpp  hexviewtab.h  tooltab.cpp  tooltabwidget.cpp
